2007-11-22  Vin Shelton  <acs@xemacs.org>

	* about.el (about-hacker-contribution): Updated my bio.

2007-11-15  Aidan Kehoe  <kehoea@parhasard.net>

	* code-files.el (write-region):
	Call #'find-coding-system on the (possible) coding system argument
	before checking it with #'coding-system-p; the latter function
	gives false results when passed coding system names as symbols. 

	Preserve the old order of determination of the coding system
	better.

2007-11-14  Aidan Kehoe  <kehoea@parhasard.net>

	* unicode.el (unicode-error-default-translation-table): 
	* unicode.el (unicode-error-sequence-regexp-range):
	* unicode.el (frob-unicode-errors-region):
	Make these variables and the single function available to
	make-docfile, by moving them to the start of the line. This
	conflicts with normal indentation of Lisp, unfortunately. 

2007-11-14  Aidan Kehoe  <kehoea@parhasard.net>

	* subr.el (string-to-sequence):
	* subr.el (string-to-list):
	* subr.el (string-to-vector):
	(append STRING nil) is faster than (mapcar #'identity STRING),
	(vconcat STRING) is faster than (mapcar #'identity STRING). Change
	from GNU. 

2007-11-14  Aidan Kehoe  <kehoea@parhasard.net>

	* code-files.el (write-region):
	Provide a new arg, CODING-SYSTEM-OR-MUSTBENEW, for compatibility
	both with GNU (where it has the MUSTBENEW meaning) and earlier
	XEmacs code (where it has the CODING-SYSTEM meaning). 
	* files.el:
	* files.el (normal-backup-enable-predicate):
	* files.el (auto-save-file-name-transforms):
	Correct the docstrings of #'normal-backup-enable-predicate,
	#'auto-save-file-name-transforms.
	* files.el (make-temp-file): New.
	Merge from GNU. 
	* subr.el:
	Document that #'make-temp-name is now in files.el. 

2007-11-08  Aidan Kehoe  <kehoea@parhasard.net>

	* cus-edit.el (custom-save-all):
	Merge Jason Spiro's fix of 
	c241693f0710021645g642f145n5925c7a35e7b2c58@mail.gmail.com , to
	avoid corruption of the custom-set-variables and custom-set-fonts