@@ -1174,15 +1174,14 @@
 
 (put 'featurep 'byte-optimizer 'byte-optimize-featurep)
 (defun byte-optimize-featurep (form)
-  (let ((to-check (cdr-safe form)))
-    (if (memq (car-safe
-	       (cdr-safe
-		(car-safe
-		 (cdr-safe 
-		  form))))
-	      byte-optimize-ever-present-features)
-	t
-      form)))
+  (if (memq (car-safe
+	     (cdr-safe
+	      (car-safe
+	       (cdr-safe 
+		form))))
+	    byte-optimize-ever-present-features)
+      t
+    form))
 
 
 ;;; enumerating those functions which need not be called if the returned
